<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionPopular"
        android:enabled="true"
        android:icon="@drawable/ic_trending"
        android:title="@string/popular"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionTop"
        android:enabled="true"
        android:icon="@drawable/ic_movie"
        android:title="@string/top"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionSearch"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionFavorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />

</menu>