<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_view_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.brianestrada.moviebrowser.ui.viewmovie.ViewMovieActivity"
    tools:showIn="@layout/activity_view_movie">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/iv_poster"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:contentDescription="@string/content_descriptor_poster_image"
                            android:transitionName="@string/transition_name_image"
                            app:srcCompat="@drawable/noimageplaceholder"
                            android:adjustViewBounds="true" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2">

                        <include layout="@layout/component_movie_info" />
                    </FrameLayout>
                </LinearLayout>

                <android.support.design.widget.TabLayout
                    android:id="@+id/tabs"
                    style="@style/AppTheme.ViewMovie.Tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TabItem
                        android:id="@+id/tab_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/tab_videos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/videos" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/tab_reviews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reviews" />
                </android.support.design.widget.TabLayout>
            </LinearLayout>


            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </ScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</RelativeLayout>
